# nextpdf-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md
docs/public/: cli.md  mcp.md  overview.md  quickstart.md
docs/release/: FINAL_EXTERNAL_REVIEW_PACKET.md  FINAL_PREFLIGHT_MATRIX.md  GITHUB_RELEASE_NOTES_v1.0.0.md  POST_GA_BACKLOG.md  PYPI_PUBLISH_CHECKLIST.md  PYPI_TRUSTED_PUBLISHER_SETUP.md  RELEASE_RUNBOOK.md  ROLLBACK_AND_HOTFIX_PLAN.md
examples/: README.md  async_batch.py  basic_extract_tables.py  basic_extract_text.py  cli_usage.sh  local_backend.py
src/nextpdf/: __init__.py  __main__.py  _async_client.py  _client.py  _http.py  _sync.py  _version.py  cli.py  mcp.py
src/nextpdf/api/: __init__.py  _ast.py  _ast_async.py
src/nextpdf/backends/: __init__.py  local.py  protocol.py  remote.py
src/nextpdf/models/: __init__.py  ast.py  connect.py  connect.pyi  errors.py
tests/: conftest.py  test_ast_api.py  test_ast_node_api.py  test_cited_tables_api.py  test_cli.py  test_client.py  test_endpoint_coverage.py  test_local_backend.py  test_models.py  test_pyproject_sbom.py  test_type_stubs.py
