[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextpdf"
version = "0.1.0"
description = "Python SDK for NextPDF — The PDF Runtime for AI Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pdf", "ai", "llm", "mcp", "document-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "pyright>=1.1",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://nextpdf.dev"
Documentation = "https://nextpdf.dev/docs/python"
Repository = "https://github.com/nextpdf-labs/nextpdf-python"

[tool.hatch.build.targets.wheel]
packages = ["src/nextpdf"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "TCH", "ANN", "RUF"]
ignore = []

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
