[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextpdf"
version = "1.0.0"
description = "Citation-ready PDF extraction for Python - AI-agent-native"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pdf", "ai", "llm", "mcp", "document-intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "anyio>=4.0",
    "click>=8.0",
    "pypdf>=4.0",
]

[project.scripts]
nextpdf = "nextpdf.cli:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "pyright>=1.1",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://nextpdf.dev"
Documentation = "https://nextpdf.dev/docs/python"
Repository = "https://github.com/nextpdf-labs/nextpdf-python"
Changelog = "https://github.com/nextpdf-labs/nextpdf-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/nextpdf-labs/nextpdf-python/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "pyright>=1.1",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nextpdf"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "TCH", "ANN", "RUF"]
ignore = []

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
